# akaldb

./: Cargo.toml  README.md  install.sh
benches/: traversal.rs
examples/: basic_usage.rs  cql_demo.rs
sdks/go/: akaldb.go  go.mod
sdks/python/: pyproject.toml
sdks/python/akaldb/: __init__.py  client.py
sdks/typescript/: package.json  tsconfig.json
sdks/typescript/src/: index.ts
src/: lib.rs  main.rs  types.rs
src/graph/: adjacency.rs  edge.rs  mod.rs  node.rs
src/query/: ast.rs  executor.rs  lexer.rs  mod.rs  parser.rs
src/storage/: memory_store.rs  mod.rs
