[project]
name = "akaldb"
version = "0.1.0"
description = "Python SDK for AkalDB — an installable reasoning database"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-httpx>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["akaldb*"]
